# oja-fresh

./: ARCHITECTURE.md  DEVELOPMENT.md  README.md
backend/: .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  seed.py
backend/dependencies/: auth.py
backend/migrations/versions/: 1d27d9685743_add_users_table_and_user_id_to_orders.py  2cd5eebd0bee_initial_tables.py
backend/routers/: admin.py  auth.py  orders.py  products.py
backend/schemas/: order.py  product.py  user.py
backend/services/: auth_service.py  order_service.py  product_service.py  user_service.py
frontend/: .gitignore  README.md  index.html
frontend/src/app/: App.tsx  routes.ts  routes.tsx
frontend/src/app/api/: client.ts  orders.ts  products.ts
frontend/src/app/components/: Footer.tsx  Navbar.tsx  ProductCard.tsx
frontend/src/app/data/: products.ts
frontend/src/app/layouts/: MainLayout.tsx
frontend/src/app/pages/: AdminSummary.tsx  AuthPage.tsx  Cart.tsx  Checkout.tsx  Home.tsx  NotFound.tsx  OrderHistory.tsx  ProductDetail.tsx  Products.tsx
frontend/src/app/store/: AuthContext.tsx  CartContext.tsx
frontend/src/app/types/: index.ts
frontend/src/imports/pasted_text/: naija-chop-ui-prompt.md
frontend/src/styles/: theme.css
